Shutter moved to snapFlimImage Arduino getLaserIntensity + Display it+ save it in file name

--- a/src/ProSettings/ProSettingsGUI.form
+++ b/src/ProSettings/ProSettingsGUI.form
@@ -26,7 +26,7 @@
               <Component id="warningPanel" min="-2" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
               <Component id="ArduinoPanel" min="-2" max="-2" attributes="0"/>
-              <EmptySpace pref="300" max="32767" attributes="0"/>
+              <EmptySpace pref="289" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -44,12 +44,13 @@
       <Layout>
         <DimensionLayout dim="0">
           <Group type="103" groupAlignment="0" attributes="0">
-              <Group type="102" attributes="0">
-                  <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                      <Component id="thresholdA0Field" pref="37" max="32767" attributes="0"/>
-                      <Component id="thresholdA1Field" max="32767" attributes="0"/>
+              <Group type="102" alignment="0" attributes="0">
+                  <Group type="103" groupAlignment="1" max="-2" attributes="0">
+                      <Component id="laserIntensityField" alignment="0" max="32767" attributes="0"/>
+                      <Component id="thresholdA0Field" alignment="0" pref="37" max="32767" attributes="0"/>
+                      <Component id="thresholdA1Field" alignment="0" max="32767" attributes="0"/>
                   </Group>
-                  <Group type="103" groupAlignment="0" attributes="0">
+                  <Group type="103" groupAlignment="0" max="-2" attributes="0">
                       <Group type="102" alignment="0" attributes="0">
                           <EmptySpace min="-2" pref="13" max="-2" attributes="0"/>
                           <Component id="thresholdA0Label" min="-2" max="-2" attributes="0"/>
@@ -58,7 +59,13 @@
                           <EmptySpace max="-2" attributes="0"/>
                           <Component id="thresholdA1Label" min="-2" max="-2" attributes="0"/>
                       </Group>
+                      <Group type="102" attributes="0">
+                          <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                          <Component id="laserIntensityLabel" max="32767" attributes="0"/>
+                      </Group>
                   </Group>
+                  <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                  <Component id="updateLaserIntensityButton" min="-2" max="-2" attributes="0"/>
                   <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
               </Group>
           </Group>
@@ -74,6 +81,12 @@
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="thresholdA1Field" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="thresholdA1Label" alignment="3" min="-2" max="-2" attributes="0"/>
+                  </Group>
+                  <EmptySpace max="-2" attributes="0"/>
+                  <Group type="103" groupAlignment="3" attributes="0">
+                      <Component id="laserIntensityField" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="laserIntensityLabel" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="updateLaserIntensityButton" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
               </Group>
           </Group>
@@ -106,18 +119,34 @@
             <Property name="text" type="java.lang.String" value="Threshold for photodiode A1 (0-3.3V)"/>
           </Properties>
         </Component>
+        <Component class="javax.swing.JTextField" name="laserIntensityField">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="0"/>
+          </Properties>
+        </Component>
+        <Component class="javax.swing.JLabel" name="laserIntensityLabel">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="Laser intensity"/>
+          </Properties>
+        </Component>
+        <Component class="javax.swing.JButton" name="updateLaserIntensityButton">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="Update"/>
+          </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="updateLaserIntensityButtonActionPerformed"/>
+          </Events>
+        </Component>
       </SubComponents>
     </Container>
     <Container class="javax.swing.JPanel" name="warningPanel">
       <Properties>
         <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-          <Color blue="0" green="0" red="0" type="rgb"/>
+          <Color blue="33" green="0" red="ff" type="rgb"/>
         </Property>
         <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
           <Border info="org.netbeans.modules.form.compat2.border.TitledBorderInfo">
-            <TitledBorder title="Important Inforamtion">
-              <Color PropertyName="color" blue="0" green="0" red="ff" type="rgb"/>
-            </TitledBorder>
+            <TitledBorder title="Important Inforamtion"/>
           </Border>
         </Property>
       </Properties>
@@ -152,14 +181,11 @@
               <Properties>
                 <Property name="editable" type="boolean" value="false"/>
                 <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-                  <Color blue="0" green="0" red="0" type="rgb"/>
+                  <Color blue="33" green="0" red="ff" type="rgb"/>
                 </Property>
                 <Property name="columns" type="int" value="20"/>
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                   <Font name="Monospaced" size="24" style="0"/>
-                </Property>
-                <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-                  <Color blue="0" green="0" red="ff" type="rgb"/>
                 </Property>
                 <Property name="rows" type="int" value="5"/>
                 <Property name="text" type="java.lang.String" value="Don&apos;t change anything on this page! &#xa;Changing these values can damage the HRI &#xa;and/or changes the behavior of the setup,&#xa;so it might not work anymore."/>
