--- a/src/com/github/dougkelly88/FLIMPlateReaderGUI/XYZClasses/GUIComponents/XYZPanel.form
+++ b/src/com/github/dougkelly88/FLIMPlateReaderGUI/XYZClasses/GUIComponents/XYZPanel.form
@@ -441,6 +441,9 @@
               <Events>
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="afObjectiveComboActionPerformed"/>
               </Events>
+              <AuxValues>
+                <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="1"/>
+              </AuxValues>
             </Component>
             <Component class="javax.swing.JLabel" name="afOffsetLabel">
               <Properties>
