--- a/src/com/github/dougkelly88/FLIMPlateReaderGUI/GeneralGUIComponents/HCAFLIMPluginFrame.form
+++ b/src/com/github/dougkelly88/FLIMPlateReaderGUI/GeneralGUIComponents/HCAFLIMPluginFrame.form
@@ -218,6 +218,9 @@
           </Layout>
           <SubComponents>
             <Container class="javax.swing.JTabbedPane" name="FLIMPanel">
+              <Events>
+                <EventHandler event="stateChanged" listener="javax.swing.event.ChangeListener" parameters="javax.swing.event.ChangeEvent" handler="FLIMPanelStateChanged"/>
+              </Events>
 
               <Layout class="org.netbeans.modules.form.compat2.layouts.support.JTabbedPaneSupportLayout"/>
               <SubComponents>
@@ -251,7 +254,7 @@
                     </Constraint>
                   </Constraints>
                 </Component>
-                <Component class="ProSettings.ProSettingsGUI" name="proSettingsGUI1">
+                <Component class="ProSettingsGUI.ProSettingsPanel" name="proSettingsGUI1">
                   <Constraints>
                     <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.support.JTabbedPaneSupportLayout" value="org.netbeans.modules.form.compat2.layouts.support.JTabbedPaneSupportLayout$JTabbedPaneConstraintsDescription">
                       <JTabbedPaneConstraints tabName="ProSettings">
