bright field led functional via arduino digital output 10, digital output 8 and 9 shutter.

--- a/src/com/github/dougkelly88/FLIMPlateReaderGUI/LightPathClasses/GUIComponents/LightPathPanel.form
+++ b/src/com/github/dougkelly88/FLIMPlateReaderGUI/LightPathClasses/GUIComponents/LightPathPanel.form
@@ -53,8 +53,11 @@
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" alignment="0" attributes="0">
                   <EmptySpace max="-2" attributes="0"/>
-                  <Component id="laserToggle" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace max="-2" attributes="0"/>
+                  <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                      <Component id="ledToggle" pref="179" max="32767" attributes="0"/>
+                      <Component id="laserToggle" max="32767" attributes="0"/>
+                  </Group>
+                  <EmptySpace min="-2" pref="82" max="-2" attributes="0"/>
                   <Component id="outputPowerPanel" min="-2" max="-2" attributes="0"/>
                   <EmptySpace type="unrelated" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
@@ -89,6 +92,8 @@
                       <Group type="102" alignment="0" attributes="0">
                           <EmptySpace min="-2" pref="33" max="-2" attributes="0"/>
                           <Component id="laserToggle" min="-2" pref="25" max="-2" attributes="0"/>
+                          <EmptySpace max="-2" attributes="0"/>
+                          <Component id="ledToggle" min="-2" max="-2" attributes="0"/>
                       </Group>
                   </Group>
                   <EmptySpace max="32767" attributes="0"/>
@@ -139,6 +144,14 @@
           <Properties>
             <Property name="text" type="java.lang.String" value="Laser run time (mins):"/>
           </Properties>
+        </Component>
+        <Component class="javax.swing.JToggleButton" name="ledToggle">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="Turn brightfield light ON"/>
+          </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="ledToggleActionPerformed"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
@@ -320,7 +333,7 @@
                       <Component id="jLabel7" min="-2" max="-2" attributes="0"/>
                       <Component id="switchPortComboBox" min="-2" pref="161" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace pref="33" max="32767" attributes="0"/>
+                  <EmptySpace max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
