--- a/src/com/github/dougkelly88/FLIMPlateReaderGUI/XYZClasses/GUIComponents/XYZPanel.form
+++ b/src/com/github/dougkelly88/FLIMPlateReaderGUI/XYZClasses/GUIComponents/XYZPanel.form
@@ -483,6 +483,9 @@
               <Properties>
                 <Property name="text" type="java.lang.String" value="AF in sequenced acquisition?"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="afInSequenceActionPerformed"/>
+              </Events>
             </Component>
           </SubComponents>
         </Container>
