ringFOVs added Calibration file default changed debugging safe canceled

--- a/src/com/github/dougkelly88/FLIMPlateReaderGUI/FLIMClasses/GUIComponents/FLIMPanel.form
+++ b/src/com/github/dougkelly88/FLIMPlateReaderGUI/FLIMClasses/GUIComponents/FLIMPanel.form
@@ -702,6 +702,9 @@
                   <Dimension value="[500, 20]"/>
                 </Property>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="CalibrationPathFieldActionPerformed"/>
+              </Events>
             </Component>
             <Component class="javax.swing.JButton" name="CalibrationPathButton">
               <Properties>
